# c-logger

./: CMakeLists.txt
example/: CMakeLists.txt
src/: logger.c
test/: CMakeLists.txt
